--- a/src/style/Leads.css
+++ b/src/style/Leads.css
@@ -3,10 +3,12 @@
   display: flex;
   height: 100vh;
   background-color: #f9f9f9;
+  color: black;
 }
 
 .sidebar {
   flex: 0 0 250px;
+  color: black;
 }
 
 .leads-card-container {
@@ -17,6 +19,7 @@
   padding: 20px;
   background-color: #f9f9f9;
   overflow-y: auto;
+  color: black;
   /* Para el scroll */
 }
 
@@ -28,13 +31,14 @@
   border-radius: 12px;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
+  color: black;
   /* Separación entre tarjetas */
 }
 
 /* Header */
 .leads-header h1 {
   text-align: center;
-  color: #9d6f35;
+  color: black;
   margin-bottom: 20px;
   font-size: 28px;
 }
@@ -44,6 +48,7 @@
   position: relative;
   max-width: 400px;
   margin: 0 auto 20px;
+  color: black;
 }
 
 .leads-search input {
@@ -53,6 +58,7 @@
   border: 1px solid #007bff;
   border-radius: 20px;
   font-size: 14px;
+  color: black;
 }
 
 .leads-search .search-icon {
@@ -71,7 +77,7 @@
   width: 100%;
   max-width: 400px;
   background-color: #c8b381;
-  color: white;
+  color: black;
   padding: 15px;
   font-size: 16px;
   font-weight: bold;
@@ -92,6 +98,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   background-color: white;
   margin-bottom: 15px;
+  color: black;
   border-left: 10px solid;
   /* Franja de color a la izquierda */
 }
@@ -111,11 +118,12 @@
   border-radius: 5px;
   margin-right: 10px;
   cursor: pointer;
+  color: black;
 }
 
 .btn-change-status {
   background-color: #28a745;
-  color: white;
+  color: black;
   border: none;
 }
 
@@ -125,7 +133,7 @@
 
 .btn-details {
   background-color: #007bff;
-  color: white;
+  color: black;
   border: none;
 }
 
@@ -135,7 +143,7 @@
 
 .btn-history {
   background-color: #ffc107;
-  color: white;
+  color: black;
   border: none;
 }
 
@@ -147,6 +155,7 @@
 .leads-list {
   max-height: 400px;
   overflow-y: auto;
+  color: black;
 }
 
 /* Estilo para el formulario */
@@ -161,6 +170,7 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 500px;
   margin-top: 20px;
+  color: black;
 }
 
 .form-container input {
@@ -169,11 +179,12 @@
   width: 100%;
   border-radius: 5px;
   border: 1px solid #ccc;
+  color: black;
 }
 
 .form-container button {
   background-color: #c8b381;
-  color: white;
+  color: black;
   padding: 15px;
   font-size: 16px;
   font-weight: bold;
@@ -188,4 +199,5 @@
 
 .form-container h3 {
   margin-bottom: 20px;
+  color: black;
 }
